err/snakes.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SNAKES-0.9.25.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/snakes'...
Listing './lib/python3.5/site-packages/snakes/lang'...
Listing './lib/python3.5/site-packages/snakes/lang/abcd'...
Compiling './lib/python3.5/site-packages/snakes/lang/astpy25.py'...
***   File "./lib/python3.5/site-packages/snakes/lang/astpy25.py", line 19
    raise TypeError, ("%s constructor takes either 0 or "
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/snakes/lang/ctlstar'...
Listing './lib/python3.5/site-packages/snakes/lang/pylib'...
Listing './lib/python3.5/site-packages/snakes/lang/python'...
Listing './lib/python3.5/site-packages/snakes/plugins'...
Listing './lib/python3.5/site-packages/snakes/utils'...
Listing './lib/python3.5/site-packages/snakes/utils/abcd'...
Listing './lib/python3.5/site-packages/snakes/utils/abcd/resources'...
Listing './lib/python3.5/site-packages/snakes/utils/abcd/resources/css'...
Listing './lib/python3.5/site-packages/snakes/utils/abcd/resources/fonts'...
Listing './lib/python3.5/site-packages/snakes/utils/abcd/resources/js'...
Listing './lib/python3.5/site-packages/snakes/utils/ctlstar'...
Listing './lib/python3.5/site-packages/snakes/utils/simul'...
Compiling './lib/python3.5/site-packages/snakes/utils/simul/httpd.py'...
***   File "./lib/python3.5/site-packages/snakes/utils/simul/httpd.py", line 206
    print "\rGoobye"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/snakes/utils/simul/resources'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/python-snakes'...
Listing './share/doc/python-snakes/examples'...
Listing './share/doc/python-snakes/examples/abcd'...
Listing './share/doc/python-snakes/examples/abcd/ns'...
Compiling './share/doc/python-snakes/examples/abcd/ns/dolev_yao.py'...
Compiling './share/doc/python-snakes/examples/abcd/ns/ns.py'...
Compiling './share/doc/python-snakes/examples/abcd/railroad.py'...
Listing './share/emacs'...
Listing './share/emacs/site-lisp'...
Listing './share/python-wheels'...
